[package]
name = "docuglot"
version = "0.1.0"
authors = ["Justin Simerly <justin.simerly@endress.com>"]
edition = "2018"

[dependencies]
enum-map = "0.6.2"
fehler = "1.0.0"
log = { version = "0.4.8", features = ["serde"] }
lsp-types = "0.77.0"
market = "0.18.0"
parse-display = "0.1.1"
serde = "1.0.104"
serde_json = "1.0"
thiserror = "1.0"
