[package]
name = "docuglot"
version = "0.6.0"
authors = ["Justin Simerly <jsim2010@gmail.com>"]
edition = "2018"
description = "A Language Server Protocol translator for clients."
license = "MIT"
repository = "https://github.com/jsim2010/docuglot.git"
readme = "README.md"
keywords = ["lsp", "lanugage", "server", "protocol"]
categories = ["text-editors"]

[dependencies]
conventus = "0.3.0"
cur = "0.4.0"
fehler = "1.0.0"
log = { version = "0.4.8", features = ["serde"] }
lsp-types = "0.86.0"
market = "0.26.0"
parse-display = "0.1.1"
serde = "1.0.104"
serde_json = "1.0"
thiserror = "1.0"
